# z-py

./: .gitignore  README.md  create.py  default.nix  pyproject.toml  template.py  z.py
src/z/: __init__.py  __main__.py  create.py  tags.py  template.py  template_funcs.py  z.py
templates/: default.md
