[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "z-py"
version = "0.0.1"
authors = [
  {name = "Tyler Starr", email= "starrtyler88@gmail.com"}
]
description = "Personal note taking framework."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent"
]
dependencies = [
]
[project.urls]
"Homepage" = "https://github.com/starr-dusT/z-py"
"Repository" = "https://github.com/starr-dusT/z-py"
[project.scripts]
z = "z.z:main"
